[tool.poetry]
name = "SerpentAI-Image"
version = "0.1.2"
description = "Image class for Serpent.AI projects"
readme = "README.md"
authors = ["Nicholas Brochu <nicholas@serpent.ai>"]
license = "MIT"
homepage = "https://serpent.ai"
repository = "https://github.com/SerpentAI/SerpentAI-Image"
keywords = ["Image Processing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Graphics"
]
packages = [
    {include = "serpent_image"},
]
include = []

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^8.3.2"
scikit-image = "^0.18.3"
scikit-learn = "^1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.28.0"
notebook = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
